namespace MoneyInTheBank.Model

{
    public class Admin: User
    {
    }
}
